--- a/Tarea1/view/index.html
+++ b/Tarea1/view/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 
 <head>
+
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <!-- Icon CSS -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
   <!-- Style CSS -->
   <link rel="stylesheet" href="../css/style.css" />
-
 
   <title>De Ride</title>
 </head>
@@ -20,9 +21,9 @@
   <header>
     <!-- Barra de Menu-->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      
       <!-- Icono -->
       <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"><strong>DR</strong></a>
-
       <a class="navbar-brand" href="#"><span class="tab-space"><strong>DE RIDE</strong></a>
       <!-- Icono -->
 
@@ -76,27 +77,29 @@
             </ol>
 
             <div class="carousel-inner" role="listbox">
-
+              <!-- Imagen 1 -->
               <div class="carousel-item active">
                 <img class="d-block w-100" src="../img/img-1.jpg" alt="Third Slide" />
                 <div class="carousel-caption">
                   <h2>Destino del Mes</h2>
                 </div>
               </div>
+              <!-- Imagen 1 -->
 
+              <!-- Imagen 2 -->
               <div class="carousel-item">
                 <img class="d-block w-100" src="../img/img-2.jpg" alt="Third Slide" />
               </div>
+              <!-- Imagen 2 -->
 
+              <!-- Imagen 3 -->
               <div class="carousel-item">
                 <img class="d-block w-100" src="../img/img-3.jpg" alt="Third Slide" />
               </div>
+              <!-- Imagen 3 -->
 
             </div>
 
-            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="icon-prev" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
           </a>
 
             <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
@@ -107,10 +110,11 @@
         </div>
       </div>
 
+      <!-- Linea -->
       <br />
       <hr class="featurette-divider">
 
-
+      <!-- Seccion: Quienes Somos -->
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
           <br />
@@ -121,14 +125,22 @@
           </p>
         </div>
       </div>
+      <!-- Seccion: Quienes Somos -->
 
+      <!-- Linea -->
       <hr class="featurette-divider">
 
+      <!-- Seccion: Que te gustaria hacer -->
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+
+          <!-- Titulo -->
           <br />
           <h2>¿Qué ride te gustaría hacer?</h2>
+          <!-- Titulo -->
+
           <div class="row">
+            <!-- Dropdown -->
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
               <br />
               <div class="dropdown">
@@ -143,67 +155,100 @@
                 </div>
               </div>
             </div>
+            <!-- Dropdown -->
+
+            <!-- Textfield -->
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
               <br />
               <input type="text" class="form-control" placeholder="Nombre de lugar">
             </div>
+            <!-- Textfield -->
+
+            <!-- Button -->
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
               <br />
               <button type="button" class="btn btn-info btn-block">Buscar</button>
             </div>
+            <!-- Button -->
+
           </div>
         </div>
       </div>
+      <!-- Seccion: Que te gustaria hacer -->
 
+      <!-- Linea -->
       <br />
       <hr class="featurette-divider">
 
+      <!-- Seccion: Que estas buscando -->
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
           <br />
+          <!-- Titulo -->
           <h2>¿Qué estás buscando?</h2>
+
         </div>
+        <!-- Imagen 1 -->
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
           <br />
           <img class="rounded-circle" src="../img/img-4.jpg" width="140" height="140">
           <h4>Hoteles</h4>
         </div>
+        <!-- Imagen 1 -->
+
+        <!-- Imagen 2 -->
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
           <br />
           <img class="rounded-circle" src="../img/img-5.jpg" width="140" height="140">
           <h4>Restaurante</h4>
         </div>
+        <!-- Imagen 2 -->
+
+        <!-- Imagen 3 -->
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
           <br />
           <img class="rounded-circle" src="../img/img-6.jpg" width="140" height="140">
           <h4>Destinos Naturales</h4>
         </div>
+        <!-- Imagen 3 -->
+
+        <!-- Imagen 4 -->
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
           <br />
           <img class="rounded-circle" src="../img/img-7.jpg" width="140" height="140">
           <h4>Deportes</h4>
         </div>
+        <!-- Imagen 4 -->
 
       </div>
+      <!-- Seccion: Que estas buscando -->
 
-
+      <!-- Linea -->
       <hr class="featurette-divider">
 
+      <!-- Footer -->
       <footer>
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <!-- Copyright -->
             <div class="pull-left">
-              <p>De Ride © 2017-2018.</p>
+              <p>De Ride © 2018.</p>
             </div>
+            <!-- Copyright -->
+
+            <!-- Iconos Redes Sociales  -->
             <div class="pull-right">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
               <a href="#"><i class="fa fa-instagram"></i></a>
               <a href="#"><i class="fa fa-youtube"></i></a>
             </div>
+            <!-- Iconos Redes Sociales  -->
+
           </div>
         </div>
       </footer>
+      <!-- Footer -->
 
     </div>
     <!-- Carousel -->
